WebShop.API/src/main/java/com/example/webshopapi/error/exception/CategoryNotFoundException.java
package com.example.webshopapi.error.exception;

public class CategoryNotFoundException extends RuntimeException {
    public CategoryNotFoundException(String message) {
        super(message);
    }
}
